--- a/services/account-service/pom.xml
+++ b/services/account-service/pom.xml
@@ -62,6 +62,12 @@
 			<artifactId>persistence-starter</artifactId>
 			<version>0.1.0-SNAPSHOT</version>
 		</dependency>
+
+		<dependency>
+			<groupId>com.oracle.database.jdbc</groupId>
+			<artifactId>ojdbc11</artifactId>
+			<version>23.5.0.24.07</version>
+		</dependency>
 	</dependencies>
 
 	<build>
