--- a/services/account-service/pom.xml
+++ b/services/account-service/pom.xml
@@ -62,7 +62,23 @@
 			<artifactId>persistence-starter</artifactId>
 			<version>0.1.0-SNAPSHOT</version>
 		</dependency>
-
+		<dependency>
+			<groupId>com.template</groupId>
+			<artifactId>kafka-starter</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.datatype</groupId>
+			<artifactId>jackson-datatype-jsr310</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>com.oracle.database.jdbc</groupId>
 			<artifactId>ojdbc11</artifactId>
