--- a/platform/docker/docker-compose.yml
+++ b/platform/docker/docker-compose.yml
@@ -9,6 +9,7 @@ volumes:
   zookeeper_data: {}
   kafka_data: {}
   oracle_data: {}
+  dev-oracle_data: {}
 
 services:
   # ---------- Database ----------
@@ -31,6 +32,26 @@ services:
       timeout: 5s
       retries: 40
     networks: [ devnet ]
+
+  oracle-ledger:
+      image: gvenzl/oracle-free:latest
+      container_name: dev-oracle-ledger
+      restart: unless-stopped
+      environment:
+        ORACLE_PASSWORD: oracle
+        APP_USER: LEDGER
+        APP_USER_PASSWORD: ledger
+      ports:
+        - "1522:1521"
+      volumes:
+        - dev-oracle_data:/opt/oracle/oradata
+      shm_size: "1g"
+      healthcheck:
+        test: [ "CMD-SHELL", "echo 'SELECT 1 FROM DUAL;' | sqlplus -s system/oracle@//127.0.0.1:1521/XEPDB1 | grep -q 1" ]
+        interval: 15s
+        timeout: 5s
+        retries: 40
+      networks: [ devnet ]
 
   # ---------- Messaging (ZooKeeper + Kafka + UI) ----------
   zookeeper:
