--- a/starters/pom.xml
+++ b/starters/pom.xml
@@ -18,5 +18,6 @@
         <module>observability-starter</module>
         <module>persistence-starter</module>
         <module>kafka-starter</module>
+        <module>outbox-starter</module>
     </modules>
 </project>
