processors and consumers were implemented into account and ledger

--- a/starters/outbox-starter/pom.xml
+++ b/starters/outbox-starter/pom.xml
@@ -58,7 +58,12 @@
 			<version>0.0.1-SNAPSHOT</version>
 			<scope>compile</scope>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <scope>provided</scope>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
