--- a/services/account-service/pom.xml
+++ b/services/account-service/pom.xml
@@ -84,7 +84,13 @@
 			<artifactId>ojdbc11</artifactId>
 			<version>23.5.0.24.07</version>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>com.template.starter</groupId>
+            <artifactId>outbox-starter</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
