transfer service was initiated

--- a/platform/docker/docker-compose.yml
+++ b/platform/docker/docker-compose.yml
@@ -10,6 +10,7 @@ volumes:
   kafka_data: {}
   oracle_data: {}
   dev-oracle_data: {}
+  transfer-oracle_data: {}
 
 services:
   # ---------- Database ----------
@@ -52,6 +53,27 @@ services:
         timeout: 5s
         retries: 40
       networks: [ devnet ]
+
+
+  oracle-transfer:
+    image: gvenzl/oracle-free:latest
+    container_name: dev-oracle-transfer
+    restart: unless-stopped
+    environment:
+      ORACLE_PASSWORD: oracle
+      APP_USER: TRANSFER
+      APP_USER_PASSWORD: transfer
+    ports:
+      - "1523:1521"
+    volumes:
+      - transfer-oracle_data:/opt/oracle/oradata
+    shm_size: "1g"
+    healthcheck:
+      test: [ "CMD-SHELL", "echo 'SELECT 1 FROM DUAL;' | sqlplus -s system/oracle@//127.0.0.1:1521/XEPDB1 | grep -q 1" ]
+      interval: 15s
+      timeout: 5s
+      retries: 40
+    networks: [ devnet ]
 
   # ---------- Messaging (ZooKeeper + Kafka + UI) ----------
   zookeeper:
