--- a/starters/pom.xml
+++ b/starters/pom.xml
@@ -19,5 +19,6 @@
         <module>persistence-starter</module>
         <module>kafka-starter</module>
         <module>outbox-starter</module>
+        <module>inbox-starter</module>
     </modules>
 </project>
