--- a/services/account-service/src/main/resources/application.yml
+++ b/services/account-service/src/main/resources/application.yml
@@ -14,6 +14,10 @@ spring:
         order_inserts: true
         order_updates: true
         jdbc.batch_size: 50
+  eureka:
+    client:
+      service-url:
+        defaultZone: http://discovery-service:8761/eureka
 
   kafka:
     bootstrap-servers: ${KAFKA_BOOTSTRAP:localhost:19092}
