--- a/services/transfer-service/src/main/resources/application.yml
+++ b/services/transfer-service/src/main/resources/application.yml
@@ -33,6 +33,10 @@ spring:
       #        spring.json.trusted.packages: "com.devbank.*"
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
       value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
+  eureka:
+    client:
+      service-url:
+        defaultZone: http://discovery-service:8761/eureka
 
 management:
   endpoints:
