--- a/services/pom.xml
+++ b/services/pom.xml
@@ -17,6 +17,6 @@
     <modules>
         <module>account-service</module>
         <module>ledger-service</module>
-        <module>transfer-service</module>
+        <module>transaction-service</module>
     </modules>
 </project>
