ledger account not found event was implemented

--- a/services/transaction-service/pom.xml
+++ b/services/transaction-service/pom.xml
@@ -82,7 +82,13 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>com.template.starter</groupId>
+            <artifactId>inbox-starter</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 
 	<dependencyManagement>
 		<dependencies>
