security starter was implemented - security was implemented into gateway

--- a/starters/pom.xml
+++ b/starters/pom.xml
@@ -20,5 +20,6 @@
         <module>kafka-starter</module>
         <module>outbox-starter</module>
         <module>inbox-starter</module>
+        <module>security-starter</module>
     </modules>
 </project>
